2011-08-27  Daiki Ueno  <ueno@unixuser.org>

	* mml-smime.el (mml-smime-epg-verify): Don't use the 4th arg of
	mm-replace-in-string for compatibility issues.
	* mml2015.el (mml2015-epg-verify): Ditto.

2011-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mailcap.el (mailcap-mime-data): Regexp-quote MIME subtype.

	* gnus-msg.el (gnus-setup-message): Remove extra apostrophe.

2011-08-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnmail.el (nnmail-get-new-mail-1): If one mail source bugs out,
	continue on and do the clean-up phase (bug#9188).

	* gnus-sum.el (gnus-summary-expire-articles): When expiring articles,
	just ignore groups that can't be opened instead of erroring out
	(bug#9225).

	* gnus-art.el (gnus-article-update-date-headers): Flip the default to
	nil since some many people are fuddy-duddies.

	* gnus-html.el (gnus-html-image-fetched): Don't cache zero-length
	images.

	* nntp.el (nntp-authinfo-file): Mark as obsolete -- use auth-source
	instead.

	* pop3.el (pop3-wait-for-messages): Don't use Gnus functions here.

	* gnus-util.el (gnus-process-live-p): Copy over compat function.

	* pop3.el (pop3-wait-for-messages): If the pop3 process dies, stop
	processing.

	* nntp.el (nntp-kill-buffer): Kill the process before killing the
	buffer to avoid warnings.

2011-08-20  Simon Josefsson  <simon@josefsson.org>

	* gnus-agent.el (gnus-agent-expire-done-message): Use %.f as format
	specified to reduce precision.

2011-08-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-transform-headers): Protect against (NIL ...)
	bodystructures (bug#9314).

2011-08-19  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-insert-mime-button, gnus-mime-display-alternative):
	Make button keymap non-sticky after buttons.

2011-08-18  David Engster  <dengste@eml.cc>

	* nnmairix.el (nnmairix-request-set-mark)
	(nnmairix-goto-original-article): Remove adding of article to registry,
	since `gnus-registry-add-group' isn't available anymore.