@@ -1,3 +1,8 @@
+2011-08-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-group.el (gnus-group-name-charset): Don't bug out on server
+	names.
+
 2011-08-27  Daiki Ueno  <ueno@unixuser.org>
 
 	* mml-smime.el (mml-smime-epg-verify): Don't use the 4th arg of
